--- a/about.html
+++ b/about.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="about.269054219240bfb6fb65bundle.js"></script></head><body></body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="/portfolio/about.ed700fb39baf8dd12c08bundle.js"></script></head><body></body></html>
