--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="index.0022a6fbdf10fb62e9e9bundle.js"></script></head><body></body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="/portfolio/index.ce5628ad1b845565c77fbundle.js"></script></head><body></body></html>
