--- a/work.html
+++ b/work.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="work.1469e84b5f61e06bea37bundle.js"></script></head><body></body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="/portfolio/work.3213433764a1bf4f762fbundle.js"></script></head><body></body></html>
